--- a/aluminium-ingots.html
+++ b/aluminium-ingots.html
@@ -34,67 +34,67 @@
     <nav>
         <div class="nav-left">
             <div class="logo">
-                <a href="index.html"><img src="assets/images/logo/logo.png" alt="Nirmal"></a>
+                <a href="index.html"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy"></a>
             </div>
             <div class="line"></div>
             <div class="group-logo">
-                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal">
+                <img src="assets/images/logo/group-logo.jpg" alt="Group Nirmal" loading="lazy">
             </div>
             <div class="menu-btn">
-                <button><img src="assets/images/svg/menu.svg" alt="icon"> MENU</button>
+                <button><img src="assets/images/svg/menu.svg" alt="icon" loading="lazy"> MENU</button>
             </div>
         </div>
         <div class="nav-right">
             <div class="social-icons">
-                <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank"><img src="assets/images/svg/facebook.svg" alt="facebook"></a>
-                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank"><img src="assets/images/svg/instagram.svg" alt="instagram"></a>
-                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank"><img src="assets/images/svg/linkedin.svg" alt="linkedin"></a>
-                <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank"><img src="assets/images/svg/youtube.svg" alt="youtube"></a>
-                <a href="https://x.com/NirmalWires" target="_blank"><img src="assets/images/svg/twitter.svg" alt="twitter"></a>
-                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download"></a>
+                <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank"><img src="assets/images/svg/facebook.svg" alt="facebook" loading="lazy"></a>
+                <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank"><img src="assets/images/svg/instagram.svg" alt="instagram" loading="lazy"></a>
+                <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank"><img src="assets/images/svg/linkedin.svg" alt="linkedin" loading="lazy"></a>
+                <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank"><img src="assets/images/svg/youtube.svg" alt="youtube" loading="lazy"></a>
+                <a href="https://x.com/NirmalWires" target="_blank"><img src="assets/images/svg/twitter.svg" alt="twitter" loading="lazy"></a>
+                <a href="download.html"><img src="assets/images/svg/download.svg" alt="download" loading="lazy"></a>
             </div>
             <a href="contact.html"><button>GET IN TOUCH</button></a>
         </div>
         <!-- Menu List -->
         <div class="nav-menu">
             <a href="index.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon">
+                <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy">
                 <span>Home</span>
             </a>
             <a href="our-story.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon">
+                <img src="assets/images/menu-icon/menu-icon-02.png" alt="icon" loading="lazy">
                 <span>Our Story</span>
             </a>
             <a href="products.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon">
+                <img src="assets/images/menu-icon/menu-icon-03.png" alt="icon" loading="lazy">
                 <span>Products</span>
             </a>
             <a href="quality-assurance.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon">
+                <img src="assets/images/menu-icon/menu-icon-04.png" alt="icon" loading="lazy">
                 <span>Quality Assurance</span>
             </a>
             <a href="trading.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon">
+                <img src="assets/images/menu-icon/menu-icon-11.png" alt="icon" loading="lazy">
                 <span>Trading</span>
             </a>
             <a href="our-presence.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon">
+                <img src="assets/images/menu-icon/menu-icon-06.png" alt="icon" loading="lazy">
                 <span>Our Presence</span>
             </a>
             <a href="csr.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon">
+                <img src="assets/images/menu-icon/menu-icon-10.png" alt="icon" loading="lazy">
                 <span>CSR</span>
             </a>
             <a href="career.php" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon">
+                <img src="assets/images/menu-icon/menu-icon-07.png" alt="icon" loading="lazy">
                 <span>Careers</span>
             </a>
             <a href="view-blog.php" class="menu">
-                <img src="assets/images/menu-icon/blog.png" alt="icon">
+                <img src="assets/images/menu-icon/blog.png" alt="icon" loading="lazy">
                 <span>Blog</span>
             </a>
             <a href="contact.html" class="menu">
-                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon">
+                <img src="assets/images/menu-icon/menu-icon-08.png" alt="icon" loading="lazy">
                 <span>Contact Us</span>
             </a>
         </div>
@@ -103,7 +103,7 @@
 
     <!-- Banner Start -->
     <section class="banner">
-        <img src="assets/images/aluminium-ingots/banner.png" alt="banner">
+        <img src="assets/images/aluminium-ingots/banner.png" alt="banner" loading="lazy">
         <div class="banner-layer"></div>
         <div class="banner-content">
             <h1 data-aos="fade-up" data-aos-duration="1200">Aluminium Ingots</h1>
@@ -118,21 +118,21 @@
         <div class="features-row">
             <div class="feature-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img class="img-fluid" src="assets/images/aluminium-ingots/feature-1.png" alt="feature" data-aos="zoom-in" data-aos-duration="1000" />
+                    <img class="img-fluid" src="assets/images/aluminium-ingots/feature-1.png" alt="feature" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" />
                 </div>
                 <h3>Lightweight</h3>
                 <p>Aluminium is very light weight which makes it ideal for applications where weight is a crucial factor.</p>
             </div>
             <div class="feature-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img class="img-fluid" src="assets/images/aluminium-ingots/feature-2.png" alt="feature" data-aos="zoom-in" data-aos-duration="1000" />
+                    <img class="img-fluid" src="assets/images/aluminium-ingots/feature-2.png" alt="feature" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" />
                 </div>
                 <h3>Corrosion Resistance</h3>
                 <p>Aluminium exhibits excellent corrosion resistance due to a protective oxide layer which forms on its surface when corrosion starts, shielding it from further damage.</p>
             </div>
             <div class="feature-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img class="img-fluid" src="assets/images/aluminium-ingots/feature-3.png" alt="feature" data-aos="zoom-in" data-aos-duration="1000" />
+                    <img class="img-fluid" src="assets/images/aluminium-ingots/feature-3.png" alt="feature" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" />
                 </div>
                 <h3>High Thermal and Electrical Conductivity</h3>
                 <p>Aluminium displays high thermal and electrical conductivity. This makes it suitable for various electrical applications.</p>
@@ -149,7 +149,7 @@
             <div class="apps-card-outer" data-aos="fade" data-aos-duration="1000">
                 <div class="apps-card">
                     <div class="apps-card-img">
-                        <img src="assets/images/application-images/trading/Aluminium ingots/Electrical.png" alt="image">
+                        <img src="assets/images/application-images/trading/Aluminium ingots/Electrical.png" alt="image" loading="lazy">
                     </div>
                     <div class="apps-card-layer">
                         <p>Aluminium is used in cables and electrical components due to its highly conductive nature.</p>
@@ -163,7 +163,7 @@
             <div class="apps-card-outer" data-aos="fade" data-aos-duration="1000">
                 <div class="apps-card">
                     <div class="apps-card-img">
-                        <img src="assets/images/application-images/trading/Aluminium ingots/Kitchen.png" alt="image">
+                        <img src="assets/images/application-images/trading/Aluminium ingots/Kitchen.png" alt="image" loading="lazy">
                     </div>
                     <div class="apps-card-layer">
                         <p>Aluminium is used in consumer goods like kitchenware and electronics due to its durable, conductive, corrosion resistant and lightweight nature.</p>
@@ -185,7 +185,7 @@
             <!-- Card 1 -->
             <div class="quality-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/aluminium-ingots/quality-1.png" alt="image" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/aluminium-ingots/quality-1.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <div class="card-desc">
                     <h3>Sourcing Excellence</h3>
@@ -195,7 +195,7 @@
             <!-- Card 2 -->
             <div class="quality-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/aluminium-ingots/quality-2.png" alt="image" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/aluminium-ingots/quality-2.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <div class="card-desc">
                     <h3>Rigorous Inspection</h3>
@@ -205,7 +205,7 @@
             <!-- Card 3 -->
             <div class="quality-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/aluminium-ingots/quality-3.png" alt="image" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/aluminium-ingots/quality-3.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <div class="card-desc">
                     <h3>Documentation and Traceability</h3>
@@ -215,7 +215,7 @@
             <!-- Card 4 -->
             <div class="quality-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/aluminium-ingots/quality-4.png" alt="image" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/aluminium-ingots/quality-4.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <div class="card-desc">
                     <h3>Continuous Improvement</h3>
@@ -233,7 +233,7 @@
             <!-- Card 1 -->
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/aluminium-ingots/choose-us-1.png" alt="image" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/aluminium-ingots/choose-us-1.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <h3>Reliable Quality</h3>
                 <p>Consistently delivering products that meet or exceed expectations.</p>
@@ -241,7 +241,7 @@
             <!-- Card 2 -->
             <div class="choose-us-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
-                    <img src="assets/images/aluminium-ingots/choose-us-2.png" alt="image" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/aluminium-ingots/choose-us-2.png" alt="image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <h3>Global Standards</h3>
                 <p>Adherence to ISO and other relevant international quality standards.</p>
@@ -255,7 +255,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-md-6 mb-4 mb-md-0">
-                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" width="170">
+                    <img class="img-fluid" src="assets/images/footer-logo.png" alt="Nirmal" width="170" loading="lazy">
                 </div>
                 <div class="col-xl-6">
                     <div class="row">
@@ -279,7 +279,7 @@
                                     <li><a href="trading.html" class="text-decoration-none">Trading</a></li>
                                     <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a></li>
                                     <li><a href="view-blog.php" class="text-decoration-none">Our Blogs</a></li>
-                                    <li><a href="coming-soon.html" class="text-decoration-none">Our Gallery</a></li>
+                                    <li><a href="our-presence.html" class="text-decoration-none">Our Gallery</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -302,32 +302,32 @@
                         <ul class="list-unstyled d-inline-flex mb-0">
                             <li>
                                 <a href="https://www.facebook.com/groupnirmal?mibextid=ZbWKwL" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook" />
+                                    <img class="img-fluid" src="assets/images/svg/facebook.svg" alt="Facebook" loading="lazy" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/group.nirmal?igsh=MWFxZ3BqZzgzamhibg==" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram" />
+                                    <img class="img-fluid" src="assets/images/svg/instagram.svg" alt="Instagram" loading="lazy" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/company/nirmal-wires-private-limited/" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin" />
+                                    <img class="img-fluid" src="assets/images/svg/linkedin.svg" alt="Linkedin" loading="lazy" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://youtube.com/@groupnirmal?si=vw5R2dLVZcAu8S32" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" />
+                                    <img class="img-fluid" src="assets/images/svg/youtube.svg" alt="Youtube" loading="lazy" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://x.com/NirmalWires" target="_blank">
-                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" />
+                                    <img class="img-fluid" src="assets/images/svg/twitter.svg" alt="Twitter" loading="lazy" />
                                 </a>
                             </li>
                         </ul>
                     </div>
-                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" width="75">
+                    <img class="img-fluid ms-auto" src="assets/images/50-years-2.png" width="75" loading="lazy">
                 </div>
             </div>
         </div>
@@ -337,7 +337,7 @@
     <!-- WhatsApp Icon Start -->
     <section class="wp">
         <a href="https://wa.me/18003093876" target="_blank">
-            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp">
+            <img src="assets/images/svg/whatsapp.svg" alt="WhatsApp" loading="lazy">
         </a>
     </section> 
     <!-- WhatsApp Icon End -->
