--- a/our-story.html
+++ b/our-story.html
@@ -400,7 +400,7 @@
                                     <li><a href="quality-assurance.html" class="text-decoration-none">Quality Assurance</a>
                                     </li>
                                     <li><a href="view-blog.php" class="text-decoration-none">Our Blogs</a></li>
-                                    <li><a href="coming-soon.html" class="text-decoration-none">Our Gallery</a></li>
+                                    <li><a href="our-presence.html" class="text-decoration-none">Our Gallery</a></li>
                                 </ul>
                             </div>
                         </div>
