Lazy loader added to images in several pages

--- a/barbed-wire.html
+++ b/barbed-wire.html
@@ -238,7 +238,7 @@
             <!-- Card 1 -->
             <div class="quality-card" data-aos="fade" data-aos-duration="1000">
                 <div class="quality-card-img">
-                    <img src="assets/images/product-internal/quality-1.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/product-internal/quality-1.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <div class="quality-card-body">
                     <h2>Raw Material Inspection</h2>
@@ -248,7 +248,7 @@
             <!-- Card 2 -->
             <div class="quality-card" data-aos="fade" data-aos-duration="1000">
                 <div class="quality-card-img">
-                    <img src="assets/images/product-internal/quality-2.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/product-internal/quality-2.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <div class="quality-card-body">
                     <h2>In-Process Testing</h2>
@@ -258,7 +258,7 @@
             <!-- Card 3 -->
             <div class="quality-card" data-aos="fade" data-aos-duration="1000">
                 <div class="quality-card-img">
-                    <img src="assets/images/product-internal/quality-3.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/product-internal/quality-3.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <div class="quality-card-body">
                     <h2>Final Inspection</h2>
@@ -268,7 +268,7 @@
             <!-- Card 4 -->
             <div class="quality-card" id="quality-card-4" data-aos="fade" data-aos-duration="1000">
                 <div class="quality-card-img">
-                    <img src="assets/images/product-internal/quality-4.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000">
+                    <img src="assets/images/product-internal/quality-4.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy">
                 </div>
                 <div class="quality-card-body">
                     <h2>Certifications</h2>
