Update navigation links and improve image accessibility across multiple HTML files
- Changed all instances of navigation links from "index.html" to root "/" for consistency.
- Added alt attributes to images for better accessibility, specifically for the "50 years logo" image.
- Ensured that all relevant HTML files reflect these changes for a unified user experience.

--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@
     <nav>
         <div class="nav-left">
             <div class="logo">
-                <a href="index.html"><img src="assets/images/logo/logo.png" alt="Nirmal"></a>
+                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal"></a>
             </div>
             <div class="line"></div>
             <div class="group-logo">
@@ -95,7 +95,7 @@
         </div>
         <!-- Menu List -->
         <div class="nav-menu">
-            <a href="index.html" class="menu">
+            <a href="/" class="menu">
                 <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon">
                 <span>Home</span>
             </a>
