--- a/coming-soon.html
+++ b/coming-soon.html
@@ -34,7 +34,7 @@
     <nav>
         <div class="nav-left">
             <div class="logo">
-                <a href="index.html"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy"></a>
+                <a href="/"><img src="assets/images/logo/logo.png" alt="Nirmal" loading="lazy"></a>
             </div>
             <div class="line"></div>
             <div class="group-logo">
@@ -57,7 +57,7 @@
         </div>
         <!-- Menu List -->
         <div class="nav-menu">
-            <a href="index.html" class="menu">
+            <a href="/" class="menu">
                 <img src="assets/images/menu-icon/menu-icon-01.png" alt="icon" loading="lazy">
                 <span>Home</span>
             </a>
